--- a/trunk/simulations-java/simulations/moving-man/data/moving-man/localization/moving-man-strings_sk.properties
+++ b/trunk/simulations-java/simulations/moving-man/data/moving-man/localization/moving-man-strings_sk.properties
@@ -1,122 +1,30 @@
-#===============================================================================
-#
-#  Slovak (sk) localized strings for "motion-man" simulation.
-#  translation from English version: Jozef Hanc, jozef.hanc@upjs.sk
-#Slovensk\u00FD preklad - Jozef Hanc, PhD., \u00DAstav fyzik\u00E1lnych vied, UPJ\u0160 v Ko\u0161iciach, Slovensko
-#
-#Pros\u00EDm kontaktujte prekladate\u013Ea (jozef.hanc@upjs.sk), ak m\u00E1te nejak\u00E9 ot\u00E1zky alebo n\u00E1mietky k slovensk\u00E9mu prekladu textu pou\u017Eit\u00E9ho v tejto simul\u00E1cii.
-#
-#
-#Slovak translation - Jozef Hanc, Ph.D., Institute of Physics, P.J.
-#Safarik University in Kosice, Slovakia
-#
-#Please contact the translator (jozef.hanc@upjs.sk) if you have some questions or objections dealing with Slovak translation of the text used in the simulation.
-
-#
-#===============================================================================
-
-#===============================================================================
-# Mandatory properties
-#===============================================================================
-
-moving-man.name=MotionMan
-moving-man.description=  Nau&#269;te sa rozumie&#357; grafom polohy, r&#253;chlosti a zr&#253;chlenia. \
-Pomocou my&#353;ky pohybujte &#269;lovie&#269;ikom (MotionManom) sem a tam a sledujte grafy jeho pohybu. \
-Alebo si nastavte poz&#237;ciu, r&#253;chlos&#357; alebo zr&#253;chlenie a dovo&#318;te po&#269;ita&#269;u, aby pohyboval MotionManom za V&#225;s.
-
-moving-man-position.name=MotionMan
-moving-man-position.description=Nau&#269;te sa rozumie&#357; grafom polohy, r&#253;chlosti a zr&#253;chlenia. \
-Pomocou my&#353;ky pohybujte &#269;lovie&#269;ikom (MotionManom) sem a tam a sledujte grafy jeho pohybu. \
-Alebo si nastavte poz&#237;ciu, r&#253;chlos&#357; alebo zr&#253;chlenie a dovo&#318;te po&#269;ita&#269;u, aby pohyboval  MotionManom za V&#225;s.
-
-mm-motion.name=MotionMan (Pohyb)
-mm-motion.description=Program MotionMan (Pohyb)
-
-mm-force1d.name=Forces in 1 Dimension
-mm-force1d.description=Forces in 1 Dimension Simulation
-
-#
-# Zakladna lokalizacia popiskov programu MotionMan
-#
-
-# PlotSet
-variables.position=Poloha
-variables.velocity=R\u00FDchlos\u0165
-variables.acceleration=Zr\u00FDchlenie
-variables.position.abbreviation=x
-variables.velocity.abbreviation=v
-variables.acceleration.abbreviation=a
-units.meters=metre
+#moving-man-strings_sk.properties created Wed Dec 01 17:53:34 CET 2010 using: moving-man 2.01.00 (44461), translation-utility 2.09.00 (44031) sep 14, 2010
+#Wed Dec 01 17:53:34 CET 2010
 units.seconds=sekundy
-units.meters.abbreviation=m
-units.velocity.abbreviation=m/s
-units.acceleration.abbreviation=<html>m/s<sup><font size=-1>2</font></sup></html>
-
-options.number-smoothing.points.title=Zme\u0148te  po\u010Det bodov vyhladzovania kriviek.
-options.number-smoothing-points=Ko\u013Eko bodov vyhladzovania kriviek?
-menu.view=Pozrie\u0165
-
-controls.reverse-x-axis=Prevr\u00E1\u0165 x-ov\u00FA os
-controls.reset=Reset
-controls.record=Zaznamenaj
-controls.playback=Prehraj
-controls.close-plot=Zavrie\u0165 tento graf
-controls.error-loading-help=Chyba pri na\u010D\u00EDtan\u00ED s\u00FAboru pomoci
-controls.help=Pomoc
-controls.special-features=\u0160peci\u00E1lne vlastnosti
-controls.special-features.mnemonic=s
-controls.vectors=Vektory
-
-# PlaybackPanel
-time.pause=Pauza
-time.playback=Z\u00E1znam
-time.rewind=Preto\u010D
-time.slow-playback=Spomalen\u00FD z\u00E1znam
-time.clear=Zmaza\u0165
-
-# MMPlot
-plot.pause=Pauza
-plot.go=\u0160tart!
-plot.clear=Zmaza\u0165
-plot.confirm-clear=Chcete naozaj zmaza\u0165 v\u0161etky grafy?
-plot.confirm-reset=Potvr\u010Fte Reset
-plot.close-graph=Zavrie\u0165 graf
-plot.show=Uk\u00E1\u017E
-plot.zoom-in=Zv\u00E4\u010D\u0161i\u0165
-plot.zoom-out=Zmen\u0161i\u0165
-plot.time=\u010Cas
-
-# RecordMode
-RecordMode.ModeName=Z\u00E1znam
-
-#Help
-help.drag-the-man=Pos\u00FAvajte \u010Dloveka
-help.drag-the-slider=\u0164ahajte posuvn\u00EDkom
-help.type-a-value=Vlo\u017Ete hodnotu
-help.drag-the-cursor==\u0164ahajte kurzorom
-
-# JEPFrame
+variables.acceleration.abbreviation=a
 expressions.title=Pohyb pod\u013Ea vzorca
-expressions.mode=Pohyb pod\u013Ea vzorca
-expressions.description=Zadajte funkciu \u010Dasu (ozna\u010Den\u00E9ho pomocou t).
-expressions.example=9*sin(t*t/pi)
-expressions.range=x(t)
-expressions.control.reset=Reset
-
-options.walls=Steny
-options.free-range=Bez prek\u00E1\u017Eok
-options.model-options=Mo\u017Enosti modelu
-options.real-time=Re\u00E1lny \u010Das
+module.introduction.title=\u00DAvod
+variables.velocity.abbreviation=v
+controls.vectors=Zobrazi\u0165 vektor
+controls.reverse-x-axis=Prevr\u00E1\u0165 x-ov\u00FA os
+label.zero-meters=0 metrov
+units.velocity.abbreviation=m/s
+units.meters.abbreviation=m
+controls.special-features=\u0160peci\u00E1lne vlastnosti
+module.charts.title=Grafy
+expressions.examples=<html>Tu je nieko\u013Eko platn\u00FDch v\u00FDrazov\:<br>x \= 3 * t + 2<br>x \= 2*sin(t)<br>x \= pow(t,2)<br><br>N\u00E1sobenie mus\u00ED by\u0165 v\u017Edy zadan\u00E9 ako 3 * t, <br>a nie ako  3t.</html>
 options.sound=Zvuk
-options.model-controls=Nastavenie modelu
-
-options.model-controls.explanation=<html>Vyberte si po\u010Det bodov,<br>\
-  ktor\u00E9 maj\u00FA by\u0165 zahrnut\u00E9 vo<br>\
-  vyhladzovacom okne pre ka\u017Ed\u00FA premenn\u00FA. <br>\
-  Toto okno (the constant-check-window) skontroluje posledn\u00E9 <br>\
-  nevyhladen\u00E9 body polohy a ak s\u00FA tie ist\u00E9, <br>\
-  nastav\u00ED r\u00FDchlos\u0165 <br>\
-  zr\u00FDchlenie ("predvyhladzovanie") na nulu.<html>
-
-options.constant-check-window=constant-check-window
-options.use-constant-window=Pou\u017Ei\u0165 Constant Window
+units.acceleration.abbreviation=<html>m/s<sup><font size\=-1>2</font></sup></html>
+variables.velocity=R\u00FDchlos\u0165
+units.seconds.abbreviation=s
+units.meters=metre
+variables.position=Poloha
+variables.acceleration=Zr\u00FDchlenie
+vectors.velocity-vector=Vektor r\u00FDchlosti
+expressions.range=x(t)
+expressions.description=Zadajte funkciu \u010Dasu (ozna\u010Den\u00E9ho pomocou t).
+vectors.acceleration-vector=Vektor zr\u00FDchlenia
+expressions.error=Chyba
+expressions.help=Pomocn\u00EDk
+variables.position.abbreviation=x
+moving-man.name=Chodec
