--- a/trunk/simulations-java/simulations/mri/data/mri/localization/mri-strings_sk.properties
+++ b/trunk/simulations-java/simulations/mri/data/mri/localization/mri-strings_sk.properties
@@ -1,37 +1,38 @@
-#C:\Program Files\PhET-1.0\sims\mri\mri-strings_sk.properties
-#Fri Mar 14 23:10:22 CET 2008
-Misc.Energy=Energia
-ControlPanel.Legend=Legenda
-SampleMaterial.oxygen=kysl\u00EDk
-Misc.Power=V\u00FDkon
-Misc.Detector=Detektor
-Application.WiggleMe=Nastavte v\u00FDkon a frekvenciu
-mri.description=Princ\u00EDp zobrazovania magnetickou rezonanciou
-SampleMaterial.nitrogen=dus\u00EDk
-Misc.RadiowaveSourceLabel=Zdroj\nr\u00E1diov\u00FDch  v\u013An
-ControlPanel.MainMagnet=Sila magnetu
-ControlPanel.RemoveTumor=Odstr\u00E1ni\u0165 n\u00E1dor
-ControlPanel.Vertical=Zvisl\u00FD
-ControlPanel.MagneticField=Magnetick\u00E1 indukcia
-mri.name=Magnetick\u00E1 rezonancia
-Module.MriTitle=Zobrazovanie magnetickou rezonanciou
-ControlPanel.SampleMaterial=Vzorka at\u00F3mov
-SampleMaterial.sodium=sod\u00EDk
-Misc.Frequency=Frekvencia
-SampleMaterial.carbon-13=uhl\u00EDk-13
-SampleMaterial.sulfur=s\u00EDra
-SampleMaterial.hydrogen=vod\u00EDk
-ControlPanel.ShowAtoms=Zobrazi\u0165 at\u00F3mov\u00E9 jadr\u00E1
-ControlPanel.GradientMagnets=Magnetick\u00FD gradient
-ControlPanel.Horizontal=Vodorovn\u00FD
+#mri-strings_sk.properties created Thu Dec 02 21:54:42 CET 2010 using: mri 1.07.00 (38013), translation-utility 2.09.00 (44031) sep 14, 2010
+#Thu Dec 02 21:54:42 CET 2010
 ControlPanel.Atom=Jadro at\u00F3mu
+ControlPanel.Vertical=Zvislo
+Application.WiggleMe=Nastavte v\u00FDkon a frekvenciu
 ControlPanel.AddTumor=Prida\u0165 n\u00E1dor
-ControlPanel.ShowFieldArrows=Zobrazi\u0165 magnetick\u00E9 pole
-Module.NmrTitle=Magnetick\u00E1 rezonancia jadier
-ControlPanel.PhotonView=Zobrazi\u0165 fot\u00F3ny
-ControlPanel.WaveView=Zobrazi\u0165 vlny
-ControlPanel.ShowHead=Zobrazi\u0165 hlavu
-ControlPanel.Legend.MagneticField=Vektor magnetickej indukcie
-ControlPanel.Legend.RadioWave=R\u00E1diov\u00E9 vlnenie
+ControlPanel.MagneticField=Magnetick\u00E1 indukcia
+ControlPanel.Legend.or=alebo
+SampleMaterial.oxygen=kysl\u00EDk
+Misc.Energy=Energia
+MRI.definition=Magnetick\u00E9 rezonan\u010Dn\u00E9 zobrazovanie
+Misc.RadiowaveSourceLabel=Zdroj\nr\u00E1diov\u00FDch  v\u013An
+NMR.definition=Magnetick\u00E1 rezonancia jadier
 ControlPanel.Head=Hlava
-
+ControlPanel.Horizontal=Vodorovne
+ControlPanel.WaveView=Zobrazi\u0165 vlny
+ControlPanel.PhotonView=Zobrazi\u0165 fot\u00F3ny
+Misc.Power=V\u00FDkon
+SampleMaterial.nitrogen=dus\u00EDk
+Module.NmrTitle=Princ\u00EDp NMR
+Misc.Detector=Detektor
+SampleMaterial.sulfur=s\u00EDra
+SampleMaterial.carbon-13=uhl\u00EDk-13
+SampleMaterial.sodium=sod\u00EDk
+ControlPanel.SampleMaterial=Vzorka at\u00F3mov
+ControlPanel.ShowAtoms=Zobrazi\u0165 at\u00F3mov\u00E9 jadr\u00E1
+mri.name=Magnetick\u00E1 rezonancia
+ControlPanel.GradientMagnets=Gradientn\u00E9 magnetick\u00E9 pole
+ControlPanel.RemoveTumor=Odstr\u00E1ni\u0165 n\u00E1dor
+ControlPanel.Legend.MagneticField=Vektor magnetickej indukcie
+ControlPanel.ShowHead=Zobrazi\u0165 hlavu
+ControlPanel.MainMagnet=Hlavn\u00FD magnet
+SampleMaterial.hydrogen=vod\u00EDk
+Module.MriTitle=Princ\u00EDp MRI
+ControlPanel.Legend.RadioWave=<html>R\u00E1diov\u00E9 vlnenie<br>Fot\u00F3ny</html>
+ControlPanel.ShowFieldArrows=Zobrazi\u0165 magnetick\u00E9 pole
+Misc.Frequency=Frekvencia
+ControlPanel.Legend=Legenda
