--- a/trunk/simulations-java/simulations/nuclear-physics/data/nuclear-physics/localization/nuclear-physics-strings_sk.properties
+++ b/trunk/simulations-java/simulations/nuclear-physics/data/nuclear-physics/localization/nuclear-physics-strings_sk.properties
@@ -1,7 +1,8 @@
-#nuclear-physics-strings_sk.properties created Thu Nov 05 22:07:27 CET 2009 using: nuclear-physics 3.18.00 (35229), translation-utility 2.03.00 (36202) okt 29, 2009
-#Thu Nov 05 22:07:27 CET 2009
+#nuclear-physics-strings_sk.properties created Thu Dec 02 20:54:55 CET 2010 using: nuclear-physics 3.22.00 (38666), translation-utility 2.09.00 (44031) sep 14, 2010
+#Thu Dec 02 20:54:55 CET 2010
 RadiometricMeter.HalfLifeOneHundredThousandYears=100 000 r
 DecayTimeChart.AtomicWeight=<html>At\u00F3mov\u00E1<br>hmotnos\u0165</html>
+DecayTimeChart.DecayTimeUnits=s
 RadiometericMeasurementControlPanel.Rock=Skala
 DatableItem.FishFossil2=kostry z ryby
 DatableItem.FishFossil1=skameneliny ryby
@@ -23,6 +24,7 @@ DatableItem.Rock4=skaly 4
 DatableItem.Rock3=skaly 3
 DatableItem.Rock2=skaly 2
 DatableItem.Rock1=skaly 1
+DecayProportionsChart.PercentC14=<html>% z <sup>14</sup>C</html>
 ModuleTitle.MultiAtomAlphaDecayModule=Mno\u017Estvo at\u00F3mov
 MultipleNucleusFissionControlPanel.ControlBorder=Ovl\u00E1da\u010De
 DecayTimeChart.Units.Hours=hod.
@@ -78,6 +80,7 @@ DecayProportionsChart.Units.MillionYears=mili\u00F3ny rokov
 HalfLifeControlPanel.CustomParentNucleusLabel=<html>Vlastn\u00FD<br>nukle\u00F3n</html>
 PotentialProfilePanel.XAxisLabel=Vzdialenos\u0165 medzi rozpadaj\u00FAcimi \u010Das\u0165ami
 ControlledFissionControlPanel.ControlRodAdjuster=Ovl\u00E1da\u010D regula\u010Dn\u00FDch ty\u010D\u00ED
+DecayTimeChart.Units.Milliseconds=ms
 DecayTimeChart.Units.Yrs=rokov
 DecayTimeChart.DecayTimeLabel=\u010Cas rozpadu
 DatableItem.Bone=kosti
@@ -88,7 +91,7 @@ DecayProportionsChart.Units.MillionYearsAbbrev=mili\u00F3n r.
 DatableItem.LivingTree=\u017Eiv\u00E9ho stromu
 alpha-decay.name=R\u00E1dioakt\u00EDvny rozpad a alfa \u017Eiarenie
 RadiometericMeasurement.PlantTree=Zasadi\u0165 strom
-DecayProportionsChart.C14C12Ratio=Pomer C14/C12
+DecayProportionsChart.C14C12Ratio=<html>Pomer <sup>14</sup>C / <sup>12</sup>C</html>
 Bucket.Label.Atoms=<html><center>Vedro s <br>at\u00F3mami</center></html>
 MultipleNucleusFissionControlPanel.ResetButton=Odznova
 ChainReactionControlPanel.Nuclei=jadier
@@ -126,7 +129,7 @@ HalfLifeControlPanel.CustomDaughterNucleusLabel=Fragment
 NuclearPhysicsControlPanel.Uranium238Label=Ur\u00E1n-238
 MultipleNucleusFissionControlPanel.ExplosionLabel=Vytvorili ste at\u00F3mov\u00FA bombu\!
 ControlledFissionControlPanel.PowerGraphLabel=Okam\u017Eit\u00FD v\u00FDkon
-DecayProportionsChart.YAxisLabelRatioC14ToC12=<html><center>Pomer<br>C14/C12</center></html>
+DecayProportionsChart.YAxisLabelRatioC14ToC12=<html>Pomer <sup>14</sup>C / <sup>12</sup>C</html>
 RadiometericMeasurement.CoolRock=Ochladi\u0165 skalu
 MultipleNucleiAlphaDecay.AddTen=Prida\u0165 10
 RadiometricMeter.HalfLifeOneMillionYears=1 000 000 r
@@ -146,12 +149,3 @@ DatableItem.DistantLivingTree=vzdialen\u00E9ho \u017Eiv\u00E9ho stromu
 Meter.MeasureObjects=Objekt
 HalfLife=Pol\u010Das rozpadu
 Meter.ProbeType=Typ sn\u00EDma\u010Da
-
-
-
-__________ Informacia od ESET NOD32 Antivirus, verzia databazy 4576 (20091105) __________
-
-Tuto spravu preveril ESET NOD32 Antivirus.
-
-http://www.eset.sk
-
