--- a/trunk/simulations-java/simulations/quantum-wave-interference/data/quantum-wave-interference/localization/quantum-wave-interference-strings_sk.properties
+++ b/trunk/simulations-java/simulations/quantum-wave-interference/data/quantum-wave-interference/localization/quantum-wave-interference-strings_sk.properties
@@ -1,5 +1,5 @@
-#C:\Program Files\PhET-1.0\sims\qwi\qwi-strings_sk.properties
-#Fri Mar 07 20:26:26 CET 2008
+#quantum-wave-interference-strings_sk.properties created Thu Dec 02 21:23:29 CET 2010 using: quantum-wave-interference 1.10.00 (38023), translation-utility 2.09.00 (44031) sep 14, 2010
+#Thu Dec 02 21:23:29 CET 2010
 controls.barriers.show=Bari\u00E9ry >>     
 gun.fire=P\u00E1\u013E
 controls.ruler=Meter
@@ -15,26 +15,23 @@ screen.title=Obrazovka
 screen.copy=Kop\u00EDrova\u0165 obrazovku
 gun.km-s=km/s
 controls.slits.anti-slits=Prek\u00E1\u017Eky miesto \u0161trb\u00EDn
-qwi-dg.description=Simul\u00E1cia p\u00F4vodn\u00E9ho pokusu, ktor\u00FD dok\u00E1zal \u017Ee elektr\u00F3n sa m\u00F4\u017Ee spr\u00E1va\u0165 ako vlna. Pri  rozptyle elektr\u00F3nov na at\u00F3moch kry\u0161t\u00E1lu  vznikaj\u00FA zoslabenia a zosilnenia zodpovedaj\u00FAce interferencii vlnenia.
 controls.detectors.auto-detect=Autodetekcia
 x.axis=os x
-qwi.description=Interferencia kvantov\u00FDch v\u013An
 gun.type=Typ pi\u0161tole
 counts.0.time.1=po\u010Det\={0}, \u010Das\={1}
 real.part=Re\u00E1lna \u010Das\u0165
 controls.barriers.title=Mo\u017Enosti
 save=Ulo\u017Ei\u0165
-clear.snapshots=Zmaza\u0165 momentky
 controls.detectors.detect=Detegova\u0165 \!
 controls.clear-wave=Zmaza\u0165 vlnu
 angle.degrees=Uho\u013E (stupne)
 imaginary.part=Imagin\u00E1rna \u010Das\u0165             
 controls.barriers.add-barrier=Prida\u0165 bari\u00E9ru   
 y.axis=os y
-davisson.germer.electron.diffraction=Davisson-Germer\: Difrakcia elektr\u00F3nov
 gun.velocity=R\u00FDchlos\u0165
 controls.slits.left-detector=Detektor v \u013Eavej \u0161trbine
 controls.em-wave-display.e-field=Elektrick\u00E1 zlo\u017Eka
+controls.reset=Obnovi\u0165
 value=Hodnota\=???
 scale.speeding-up-time=Zr\u00FDchlenie \u010Dasu
 scale.zooming-in=Pribl\u00ED\u017Eenie
@@ -45,12 +42,12 @@ resolution1=Rozl\u00ED\u0161enie>>
 menus.show-expectation-x=Zobrazi\u0165 pravdepodobn\u00FA hodnotu <X>
 particles.neutrons=\    Neutr\u00F3ny
 controls.slits.hide=Odstr\u00E1ni\u0165 dvoj\u0161trbinu <<
+ui=Prostredie
 menus.resolution=Rozl\u00ED\u0161enie
 menus.options=Nastavenia
 controls.em-wave-display=Zobrazenie el. magnetickej  vlny
 double.slit=Dvoj\u0161trbina
 controls.detectors.show=Detektory >>
-save.snapshot=Ulo\u017Ei\u0165 moment\u00E1lny stav
 controls.stopwatch=Stopky
 ns=ns
 controls.barriers.remove-all=Odstr\u00E1ni\u0165 v\u0161etky
@@ -79,7 +76,6 @@ controls.slits.vertical-position=Zvisl\u00E1 poloha
 particles.electrons=\      Elektr\u00F3ny
 menus.load=Na\u010D\u00EDta\u0165 (detektory a bari\u00E9ry)
 error=Chyba
-qwi.name=Interferencia kvantov\u00FDch v\u013An
 phase.color=F\u00E1zu farebne
 gun.auto-repeat=Automaticky opakova\u0165
 screen2=Obrazovka <<
@@ -95,10 +91,9 @@ module.lasers=Dva lasery
 magnitude=Magnit\u00FAda
 intensity.screen=Intenzita obrazovky
 plot=Diagram
-qwi-dg.name=Davisson-Germerov experiment
+davisson-germer.name=Davissonov-Germerov experiment
 controls.detectors.title=Detekcia
 menus.save=Ulo\u017Ei\u0165 (detektory a bari\u00E9ry)
 magnitude.0=Magnit\u00FAda\={0}
 particles.photons=\  Fot\u00F3ny
 controls.slits.absorbing-barriers=Absorbuj\u00FAce prek\u00E1\u017Eky
-
