--- a/trunk/simulations-java/simulations/sound/data/sound/localization/sound-strings_sk.properties
+++ b/trunk/simulations-java/simulations/sound/data/sound/localization/sound-strings_sk.properties
@@ -1,5 +1,5 @@
-#C:\Program Files\PhET-1.0\sims\sound\sound-strings_sk.properties
-#Tue Mar 11 01:32:55 CET 2008
+#sound-strings_sk.properties created Thu Dec 02 01:26:43 CET 2010 using: sound 2.16.00 (41431), translation-utility 2.09.00 (44031) sep 14, 2010
+#Thu Dec 02 01:26:43 CET 2010
 SingleSourceWithBoxModule.Pressure=Tlak
 SingleSourceMeasureModule.Help1=Pou\u017Eite meter na ur\u010Denie vlnovej d\u013A\u017Eky.
 SingleSourceWithBoxModule.BorderTitle=Hustota vzduchu
@@ -8,19 +8,16 @@ SoundControlPanel.Octave=Okt\u00E1va
 ModuleTitle.SingleSourceListen=<html>Posluch\u00E1\u010D a<br>jeden zdroj</html>
 ModuleTitle.SingelSourceWithBox=<html>Posluch\u00E1\u010D a<br>r\u00F4zny  tlak vzduchu</html>
 WallInterferenceMode.continuous=Nepretr\u017Eite
-SoundApplication.title=Zvukov\u00E9 vlny
 ModuleTitle.TwoSpeakerIntererence=<html>Dva zdroje<br>Interferencia</html>
 sound.name=Zvukov\u00E9 vlny
 WallInterferenceModule.Position=Poloha steny
 AudioControlPanel.BorderTitle=Audio ovl\u00E1da\u010De
 ClockPanelLarge.Reset=Odznova
-SingleSourceWithBoxModule.RemoveAir=<html>Odobra\u0165 vzduch<br>z komory </html>
+SingleSourceWithBoxModule.RemoveAir=<html>Od\u010Derpa\u0165 vzduch<br>z komory </html>
 TwoSpeakerInterferenceModule.Help2=Horn\u00FD reproduktor m\u00F4\u017Eete \nposun\u00FA\u0165 hore alebo dole
 TwoSpeakerInterferenceModule.Help1=Posluch\u00E1\u010Da m\u00F4\u017Eete posun\u00FA\u0165 \nv\u0161etk\u00FDmi smermi
 WallInterferenceMode.pulse=Impulzy
-SoundApplication.description=Ako sa zvukov\u00E9 vlny \u0161\u00EDria a ako ich po\u010Dujeme.
 WallInterferenceMode.modeCtrlTitle=Re\u017Eim
-sound.description=Ako sa zvukov\u00E9 vlny \u0161\u00EDria a ako ich po\u010Dujeme.
 SoundControlPanel.Amplitude=Amplit\u00FAda
 ModuleTitle.WallInterference=<html>Interferencia<br>pri odraze</html>
 WallInterferenceModule.Angle=Uhol steny
@@ -35,4 +32,4 @@ AudioControlPanel.Listener=Posluch\u00E1\u010D
 AudioControlPanel.Enabled=Zapn\u00FA\u0165 audio
 SoundControlPanel.BorderTitle=Frekvencia
 SingleSourceMeasureModule.Help2=Modr\u00E9 \u010Diary m\u00F4\u017Eete presun\u00FA\u0165 v\u013Eavo alebo vpravo, \ns\u00FA pom\u00F4ckou pri meran\u00ED vlnovej d\u013A\u017Eky.
-
+MeasureMode.ClearWave=Zmaza\u0165 vlnenie
